--- a/resume-analyzer/src/main/resources/application.properties
+++ b/resume-analyzer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # application.properties
-spring.datasource.url=jdbc:postgresql://localhost:5000/screener
+spring.datasource.url=jdbc:postgresql://localhost:5000/resume_db
 spring.datasource.username=postgres
 spring.datasource.password=Gautam02
 
