--- a/ai/Dockerfile
+++ b/ai/Dockerfile
@@ -1,9 +1,27 @@
-FROM python:3.10
+FROM python:3.10-slim
 
 WORKDIR /app
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements and install
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Download spaCy model
 RUN python -m spacy download en_core_web_sm
+
+# Copy application code
 COPY . .
+
+# Expose port
 EXPOSE 6000
+
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
+
+# Run the application
 CMD ["python", "app.py"]
