--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,9 +1,14 @@
-flask
-sentence-transformers
-torch
-pymupdf
-python-docx
-spacy
-numpy==1.24.4
-scipy
-scikit-learn
+flask==3.0.0
+langchain==0.1.0
+langchain-openai==0.0.2
+langgraph==0.0.20
+sentence-transformers==2.2.2
+torch==2.2.0
+pymupdf==1.23.8
+python-docx==1.1.0
+spacy==3.7.2
+pydantic==2.5.0
+tiktoken==0.5.2
+werkzeug==3.0.0
+reportlab==4.0.7
+matplotlib==3.8.2
