--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,14 +1,20 @@
 flask==3.0.0
-langchain==0.1.0
-langchain-openai==0.0.2
-langgraph==0.0.20
-sentence-transformers==2.2.2
-torch==2.2.0
-pymupdf==1.23.8
-python-docx==1.1.0
-spacy==3.7.2
-pydantic==2.5.0
-tiktoken==0.5.2
 werkzeug==3.0.0
-reportlab==4.0.7
-matplotlib==3.8.2
+langchain==0.3.12
+langchain-community==0.3.12
+langchain-core==0.3.25
+langchain-openai==0.2.12
+langgraph==0.2.59
+sentence-transformers==3.3.1
+spacy==3.8.3
+torch==2.4.0
+torchvision==0.19.0
+pydantic==2.10.3
+tiktoken==0.8.0
+pymupdf==1.25.1
+python-docx==1.1.2
+reportlab==4.2.5
+matplotlib==3.9.2
+python-dotenv==1.0.1b
+eautifulsoup4==4.12.3
+lxml==5.3.0
