--- a/ai/.gitignore
+++ b/ai/.gitignore
@@ -1,3 +1,17 @@
-venv
+venv/
 .env
-__pycache__
+__pycache__/
+*.pyc
+*.pyo
+.pytest_cache/
+*.egg-info/
+
+# Model cache
+.cache/
+
+# Test files
+test_resume.pdf
+temp_resume.pdf
+
+# Logs
+*.log
