--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -15,6 +15,7 @@ pymupdf==1.25.1
 python-docx==1.1.2
 reportlab==4.2.5
 matplotlib==3.9.2
-python-dotenv==1.0.1b
-eautifulsoup4==4.12.3
+python-dotenv==1.0.1
+beautifulsoup4==4.12.3
 lxml==5.3.0
+redis==5.0.1
